k8s/ingress/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-grafana
                port:
                  number: 80

    - host: prom.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-kube-prometheus-stack-prometheus
                port:
                  number: 9090

    - host: am.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-kube-prometheus-stack-alertmanager
                port:
                  number: 9093
